...
                                            <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" preservesSuperviewLayoutMargins="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m34-ff-402" customClass="RoundedButtonFilled" 
                                                <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
                                                <accessibility key="accessibilityConfiguration" identifier="continueButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="kXG-Uw-1h8"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ověřovací kód(povinné)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XPz-6e-tCh">
                                                        <rect key="frame" x="0.0" y="92.666666666666671" width="343" height="44.000000000000014"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="smsInput"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="44" id="ezO-67-yb2"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vDN-Uj-w2M" userLabel="Action Button" customClass="RoundedButtonFilled" customModule="eRousk
                                        <rect key="frame" x="16" y="50" width="343" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="verifyButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="qyb-VU-W0a"/>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Telefonní číslo (povinné)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lga-hM-kAK">
                                                                <rect key="frame" x="60" y="0.0" width="283" height="44"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="phoneNumberInput"/>
                                                                <constraints>
                                                                    <constraint firstAttribute="height" constant="44" id="9bG-7B-cj9"/>
...
                                                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="N6i-Um-KwL">
                                                                <rect key="frame" x="294" y="0.0" width="51" height="31"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="confirmSwitch"/>
                                                                <connections>
                                                                    <action selector="permissionSwitch:" destination="Suq-UZ-u6k" eventType="valueChanged" id="OdB-Bb-2cd"/>
...
